--- a/fimicsnodejs/src/es6/es5.html
+++ b/fimicsnodejs/src/es6/es5.html
@@ -95,6 +95,30 @@
         var hello2 = ({name}) => console.log("hello2 " + name);
         hello2(person1);
 
+        //map
+        let arr =['1','2','3','4'];
+        console.log(arr);
+        arr1 = arr.map(s=>parseInt(s))
+        console.log(arr1)
+
+        //promise
+        const promise = new Promise(function (resolve, reject) {
+            setTimeout(()=>{
+                let num = Math.random();
+                if(num < 0.5){
+                    resolve("操作成功！num=" + num);
+                } else {
+                    reject("操作失败！num=" + num);
+                }
+            },300);
+        });
+
+        promise.then(function (msg) {
+            console.log(msg);
+        }).catch(function (msg) {
+            console.log(msg);
+        });
+
     </script>
 </head>
 <body>
